# djsm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
djsm/: __init__.py  apps.py  crypt.py  exceptions.py  jcrypt.py  manager.py  misc.py
djsm/management/commands/: change_cryptkeys.py  djsm_cleanup.py  djsm_reload_env.py  update_secrets.py  use_djsm.py
